// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VueJestExtended .toHaveEmitted .not.toHaveEmitted fails when one of the events emitted by the wrapper matches the event given 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toHaveEmitted([22m[32mexpected[39m[2m)[22m


        Expected wrapper not to have emitted:

          [32m\\"input\\"[39m
        Received:

          [31m{\\"input\\": [{\\"data\\": \\"test\\"}]}[39m
        "
`;

exports[`VueJestExtended .toHaveEmitted fails if no event has been emitted 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


        Expected wrapper to have emitted:

          [32m\\"input\\"[39m
        Received:

          [31m{}[39m
        "
`;

exports[`VueJestExtended .toHaveEmitted fails if none of the events emitted by the wrapper matches the event given 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


        Expected wrapper to have emitted:

          [32m\\"input\\"[39m
        Received:

          [31m{\\"change\\": [{\\"data\\": \\"test\\"}]}[39m
        "
`;

exports[`VueJestExtended .toHaveEmittedPayload .not.toHaveEmittedPayload fails when the payload of the event emitted by the wrapper matches the payload given 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toHaveEmitted([22m[32mexpected[39m[2m)[22m


        Expected wrapper not to have emitted:

          [32m{\\"input\\": [{\\"data\\": \\"test\\"}]}[39m
        Received:

          [31m{\\"change\\": [{\\"test\\": \\"data\\"}], \\"input\\": [{\\"data\\": \\"test\\"}]}[39m
        "
`;

exports[`VueJestExtended .toHaveEmittedPayload fails if no event has been emitted 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


        Expected wrapper to have emitted:

          [32m{\\"input\\": [{\\"test\\": \\"data\\"}]}[39m
        Received:

          [31m{}[39m
        "
`;

exports[`VueJestExtended .toHaveEmittedPayload fails if the event has not been emitted 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


        Expected wrapper to have emitted:

          [32m{\\"input\\": [{\\"test\\": \\"data\\"}]}[39m
        Received:

          [31m{\\"change\\": [{\\"test\\": \\"data\\"}]}[39m
        "
`;

exports[`VueJestExtended .toHaveEmittedPayload fails if the payload of the event does not match the payload given 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


        Expected wrapper to have emitted:

          [32m{\\"input\\": [{\\"test\\": \\"data\\"}]}[39m
        Received:

          [31m{\\"change\\": [{\\"test\\": \\"data\\"}], \\"input\\": [{\\"data\\": \\"test\\"}]}[39m
        "
`;
